2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Introduce point-wise function bindings.

	* mln/pw/bind.hh: New.
	* mln/pw/all.hh: Include mln/pw/bind.hh.
	* tests/pw/bind.cc: New.
	* tests/pw/Makefile.am (check_PROGRAMS): Add bind.
	* headers.mk,
	* tests/unit_test/unit-tests.mk:
	Regen.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Add support for unary minus on images.

	* mln/arith/minus.hh
	(mln::trait::set_unary_<op::uminus, Image, I>): New.
	(mln::operator-(const Image<I>&))
	(mln::arith::uminus(const Image<I>&))
	(mln::arith::impl::uminus_(trait::image::speed::any, const I&, O&))
	(mln::arith::impl::uminus_(trait::image::speed::fastest, const I&, O&)):
	New.
	* tests/arith/minus.cc: Exercise unary minus.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Exercise the unary plus operator on images.

	* tests/arith/plus.cc: Here.
	Remove dead code.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Fix and update the Doxygen documentation.

	* mln/arith/minus.hh,
	* mln/fun/vv2v/diff_abs.hh,
	* mln/math/diff_abs.hh:
	Here.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Aesthetic changes.

	* mln/arith/minus.hh,
	* tests/core/image/imorph/interpolated.cc:
	Here.

2013-10-07  Roland Levillain  <roland@lrde.epita.fr>

	Milena: New test exercising fun_image with RGB component functions.

	* tests/core/image/vmorph/fun_image_rgb.cc: New.
	* tests/core/image/vmorph/Makefile.am (check_PROGRAMS):
	Add fun_image_rgb.

2013-09-13  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Factor Makefiles a bit more using file inclusion.

	* tests/tests.mk (AM_CPPFLAGS): Move general flags...
	* common.mk (AM_CPPFLAGS): ...here.
	Include it...
	* doc/Makefile.am: ...here, to factor common parts.
	* milena/apps/apps.mk: New file.
	Include it...
	* apps/constrained-connectivity/Makefile.am,
	* apps/generic-skel/Makefile.am,
	* apps/graph-morpho/Makefile.am,
	* apps/morphers/Makefile.am,